# pypp-opengl

./: pyproject.toml  readme.md
pypp_opengl/: __init__.py  custom.py  glad_loader.py
pypp_opengl/pypp_data/cpp/pypp_opengl/: custom.cpp  custom.h
pypp_opengl/pypp_data/transpiler_config/: always_pass_by_value.json  attr_map.json  call_map.json  cmake_lists.json
pypp_opengl/pypp_data/transpiler_config/mapping_functions/: gl_attr.py  glad_load_gl.py  np_array.py
