[project]
name = "pypp-opengl"
version = "0.0.0"
description = ""
authors = []
readme = "readme.md"
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "PyOpenGL"
]

[tool.hatch.build]
include = ["pypp_opengl/**/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"